Fix dark mode SVG rendering

--- a/website/assets/sass/style.sass
+++ b/website/assets/sass/style.sass
@@ -21,9 +21,11 @@
   border: 1.5px solid red
 
 // SVG-specific variables
-$svg-gray: rgb(224, 235, 247)
+$svg-gray: #001b3d
 $svg-white: white
 $svg-primary: #28d9f2
+$dark-mode-gray: rgb(224, 235, 247)
+$dark-mode-black: #191927
 
 // SVG theme compatibility
 svg
@@ -60,12 +62,12 @@ html
   &.dark
     svg
       [fill="#000000"]
-        fill: $svg-gray
+        fill: $dark-mode-gray
       [stroke="#000000"]
-        stroke: $svg-gray
+        stroke: $dark-mode-gray
       [stop-color="#000000"]
-        stop-color: $svg-gray
+        stop-color: $dark-mode-gray
       [fill="#FFFFFF"]
-        fill: $svg-white
+        fill: $dark-mode-black
       [stroke="$FFFFFF"]
-        stroke: $svg-white
+        stroke: $dark-mode-black
